Fixed the error in index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <hr>
 
     <h1 id="education" style="font-size: 20px;">Education Summary Section</h1>
-    <p>I am only pursuing a bachelor's degree.</p>
+    <p>I am only pursuing a bachelors degree.</p>
     <p>The relevant coursework I have taken consists of the following: CUS 1115, CUS 1116, CUS 1126, NET 1011. I am currently taking CUS 1172, CUS 1185, and CUS 1163.</p>
     <hr>
 
@@ -130,7 +130,7 @@
         <p>Summarizes all projects as well as future projects here</p>
         <ul>
             <li>
-                <a href="project.html" target="_self">Milestone One: Basic Profile Page</a>
+                <a href="index.html" target="_self">Milestone One: Basic Profile Page</a>
                 <span> - Reveals basic profile information, education, and programming skills.</span>
             </li>
         </ul>
